# dfb_full_tutorial

./: README.md  pyproject.toml
mysite/: db.sqlite3
mysite/main/: admin.py  forms.py  models.py  urls.py  views.py
mysite/main/migrations/: 0001_initial.py
mysite/main/templates/main/: base.html  create.html  home.html  items.html  list.html  lists.html
mysite/mysite/: settings.py  urls.py
mysite/register/: forms.py  views.py
mysite/register/templates/register/: register.html
mysite/register/templates/registration/: login.html
